completing the contact us page

--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -51,12 +51,41 @@
     </div>
   </nav>
   
-    <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
-      <div class="banner" name="about-header">
-        <h1> Contact Us</h1>
- 
-      </div>
+  <div class="card" style="width: 80%;margin: auto; margin-top:5%;border-color: white;">
+    <div class="banner" name="about-header" style="margin-bottom: 1%;">
+      <h1 class="banner-title"> Contact Us</h1>
+      <img src="/static/showroom1.webp" alt="card-image">
     </div>
+    <div style="display: flex;flex-direction: row; margin:auto">
+        <div class="card" style="width: 50%; border-color: white;">
+        <div class="card-body">
+            <img class="card-img-top" src="/static/contactus.png" alt="card-image">
+        
+             
+        </div>
+        </div>
+
+        <div class="card" style="width: 60%;border-color: white;">
+        <div class="card-body">
+            <p class="other-title">Contact Customer Service</p>
+            <address>
+                <a class="text-decoration-none" href="mailto:support@bestcars.com">support@bestcars.com</a>
+            </address>
+            <p class="other-title">Contact our National Advertising team</p>
+            <address>
+                <a class="text-decoration-none" href="mailto:NationalSales@bestcars.com">NationalSales@bestcars.com</a>
+            </address>
+            <p class="other-title">Contact our Public Relations team</p>
+            <address>
+                <a class="text-decoration-none" href="mailto:PR@bestcars.com">PR@bestcars.com</a>
+            </address>
+            <p class="other-title">Contact the bestcars.com offices</p>
+            <p><a href="tel:9051290512" class="text-decoration-none">9051290512</a></p>
+        </div>
+        </div>
+
+    </div>
+  </div>
 
 </div>
   
