contact page update

--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -81,6 +81,9 @@
             </address>
             <p class="other-title">Contact the bestcars.com offices</p>
             <p><a href="tel:9051290512" class="text-decoration-none">9051290512</a></p>
+            <p class="other-title">Become a bestcard.com car dealer </br>
+                visit <a class="text-decoration-none" href="">growwithbestcars.com</a>
+            </p>
         </div>
         </div>
 
